--- a/src/test.html
+++ b/src/test.html
@@ -13,13 +13,13 @@
   <link rel="stylesheet" href="./style/app.css" />
 
 
-<header class="only-print">&#128424;<!--🖨️--> Print-only header! </header>
+<header role="banner" class="only-print">&#128424;<!--🖨️--> Print-only header! </header>
 
 <div class="cookie-notice"> I am a cookie notice <button> Close me! </button> </div>
 
-<main>
+<main role="main" class="border">
   <p class="not-print">
-    <a href="./export.php?file=test.html" class="btn" target="_blank" title="New window">Export to PDF</a>
+    <a href="./export.php?file=test.html" class="btn" >Export to PDF</a>
     &middot;
     <button id="print-button" onclick="window.print();">"Print &hellip; to PDF"</button>
     &middot;
