--- a/src/test.html
+++ b/src/test.html
@@ -19,11 +19,11 @@
 
 <main role="main" class="border">
   <p class="not-print">
-    <a href="./export.php?file=test.html" class="btn" >Export to PDF</a>
+    <a href="./export.php?file=test.html&lib=dompdf" class="btn" >Export to PDF</a>
     &middot;
     <button id="print-button" onclick="window.print();">"Print &hellip; to PDF"</button>
     &middot;
-    <a href="./dompdf.log.html">Log file</a>
+    <a href="./dompdf.log.html" title="Log for `Dompdf`">Log file</a>
   </p>
 
   <h1> Print CSS / PDF test </h1>
@@ -52,6 +52,9 @@
 </main>
 
 
+<script src="js/app.js" type="module"></script>
+
+
 <pre class="not-print">
 
 NDF, 15-June-2021.
@@ -65,3 +68,4 @@ NDF, 15-June-2021.
 * (https://npmjs.com/package/html-pdf)
 
 </pre>
+</html>
