--- a/src/test.html
+++ b/src/test.html
@@ -3,7 +3,10 @@
 
   <link rel="gist" href="https://gist.github.com/nfreear/51eaee1781e5e5c885a474432b2e1325" />
 
-  <title> Print CSS / PDF test </title>
+  <title>PDF test document 1</title>
+  <meta name="author" content="Nick F." />
+  <meta name="keyword" content="Print CSS, PDF/UA" />
+  <meta name="description" content="A test description." />
 
   <!--<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/paper-css/0.3.0/paper.css"> -->
 
